test/types/records/ferguson/default-compare-mixed-insn.1.good
default-compare-mixed-insn.chpl:8: In function 'main':
default-compare-mixed-insn.chpl:13: error: unresolved call '==(R(int(32)), R(int(64)))'
$CHPL_HOME/modules/internal/ChapelBase.chpl:97: note: this candidate did not match: ==(a: _nilType, b: _nilType)
